tests/baselines/reference/invalidVoidAssignments.errors.txt
==== tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts (13 errors) ====
    var x: void;
    
    var a: boolean = x;
        ~
!!! error TS2323: Type 'void' is not assignable to type 'boolean'.
    var b: string = x;
        ~
!!! error TS2323: Type 'void' is not assignable to type 'string'.
    var c: number = x;
        ~
!!! error TS2323: Type 'void' is not assignable to type 'number'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2323: Type 'void' is not assignable to type 'C'.
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2323: Type 'void' is not assignable to type 'I'.
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type 'number' is not assignable to type '{ baz: string; }':
!!! error TS2322:   Property 'baz' is missing in type 'Number'.
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ 0: number; }':
!!! error TS2322:   Property '0' is missing in type 'Number'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2323: Type 'void' is not assignable to type 'T'.
    }
    i = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    enum E { A }
    x = E;
    ~
!!! error TS2323: Type 'typeof E' is not assignable to type 'void'.
    x = E.A;
    ~
!!! error TS2323: Type 'E' is not assignable to type 'void'.
    
    x = { f() { } }
    ~
!!! error TS2323: Type '{ f: () => void; }' is not assignable to type 'void'.